# symengine

./: .clang-format  .gitattributes  .gitignore  .gitmodules  .mailmap  .travis.yml  AUTHORS  CMakeCache.txt  CMakeLists.txt  CONTRIBUTING.md  CTestTestfile.cmake  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  SymEngineConfig.cmake  SymEngineConfig.cmake.in  SymEngineConfigVersion.cmake  SymEngineTargets.cmake  _formulas.tex  _formulas_dark.tex  add_8cpp.html  add_8cpp__incl.map  add_8cpp__incl.md5  add_8cpp_source.html  add_8h.html  add_8h__dep__incl.map  add_8h__dep__incl.md5  add_8h__incl.map  add_8h__incl.md5  add_8h_source.html  annotated.html  appveyor.yml  as__real__imag_8cpp_source.html  assumptions_8cpp_source.html  assumptions_8h_source.html  basic-inl_8h_source.html  basic-methods_8inc_source.html  basic_8cpp_source.html  (+1898 more)
benchmarks/: .gitattributes  A.txt  CMakeLists.txt  CTestTestfile.cmake  Lambdify.py  Makefile  add1  add1.cpp  bench.cpp  bench_common.cpp  bench_common.h  bench_eval_double.cpp  bench_lambda_double.cpp  bench_llvm_double.cpp  bench_native_double.cpp  cmake_install.cmake  diff.py  diff_cache.cpp  eom.txt  eval_double1  eval_double1.cpp  expand1  expand1.cpp  expand1.nb  expand1.py  expand1_sage.py  expand2  expand2.cpp  expand2.ipynb  expand2.nb  expand2.py  expand2_ginac  expand2_ginac.cpp  expand2_sage.py  expand2b  expand2b.cpp  expand2b_sage.sage  expand2b_sympy.py  expand2c.cpp  expand2d.cpp  (+67 more)
csympy/lib/: CMakeLists.txt  config.pxi.in  csympy.pxd  csympy_wrapper.pyx  csympy_wrapper.pyx.in
matchpygen/: CMakeLists.txt  bipartite.h  common.h  example.cpp  example_coroutine.cpp  example_coroutine2.cpp  example_setjmp.cpp  example_yield.cpp  generator_trick.h  test_bipartite.cpp
src/: CMakeLists.txt  add.cpp  add.h  basic-inl.h  basic.cpp  basic.h  complex.cpp  complex.h  complex_double.cpp  complex_double.h  complex_mpc.cpp  complex_mpc.h  constants.cpp  constants.h  csympy_assert.h  csympy_config.h  csympy_config.h.in  csympy_rcp.cpp  csympy_rcp.h  cwrapper.cpp  cwrapper.h  dense_matrix.cpp  dict.cpp  dict.h  diophantine.cpp  diophantine.h  eval.cpp  eval.h  eval_arb.cpp  eval_arb.h  eval_double.cpp  eval_double.h  eval_mpfr.cpp  functions.cpp  functions.h  integer.cpp  integer.h  matrix.cpp  matrix.h  monomials.cpp  (+26 more)
src/ruby/: CMakeLists.txt  Gemfile  Manifest.txt  README.md  symengine.gemspec
src/ruby/lib/: symengine.rb
src/tests/: CMakeLists.txt
src/tests/basic/: CMakeLists.txt  main.cpp  test_arit.cpp  test_basic.cpp  test_functions.cpp  test_integer.cpp  test_ntheory.cpp  test_poly.cpp  test_polynomial.cpp  test_subs.cpp
src/tests/cwrapper/: CMakeLists.txt  test_cwrapper.c
src/teuchos/: CMakeLists.txt  Teuchos_RCP.hpp  Teuchos_RCPDecl.hpp  Teuchos_config.h  Teuchos_config.h.in  Teuchos_dyn_cast.cpp  Teuchos_stacktrace.cpp
symengine/: :  CMakeLists.txt  CMakeLists.txt~  CTestTestfile.cmake  Makefile  __init__.py  add.cpp  add.h  as_real_imag.cpp  assumptions.cpp  assumptions.h  basic-inl.h  basic-methods.inc  basic.cpp  basic.h  basic_to_poly.cpp  basic_to_upoly.cpp  bottom_up.cpp  calculate.cpp  calculate.h  cmake_install.cmake  codegen.h  complex.cpp  complex.h  complex_double.cpp  complex_double.h  complex_mpc.cpp  complex_mpc.h  constants.cpp  constants.h  cse.cpp  cse.h  cwrapper.cpp  cwrapper.h  dense_matrix.cpp  derivative.cpp  derivative.h  dict.cpp  dict.h  diff.cpp  (+154 more)
symengine/catch/: CMakeLists.txt  catch.cpp
symengine/lib/: symengine_wrapper.pyx
symengine/matrices/: conjugate_matrix.cpp  conjugate_matrix.h  diagonal_matrix.cpp  diagonal_matrix.h  hadamard_product.h  identity_matrix.h  immutable_dense_matrix.cpp  immutable_dense_matrix.h  is_diagonal.cpp  is_diagonal.h  is_lower.cpp  is_lower.h  is_real.cpp  is_real.h  is_square.cpp  is_square.h  is_symmetric.cpp  is_symmetric.h  is_toeplitz.cpp  is_toeplitz.h  is_upper.cpp  is_upper.h  is_zero.cpp  is_zero.h  matrix_add.cpp  matrix_add.h  matrix_expr.h  matrix_mul.cpp  matrix_mul.h  matrix_symbol.h  size.cpp  size.h  trace.cpp  trace.h  transpose.cpp  transpose.h  zero_matrix.h
symengine/numerics/: number_visitor.cpp  number_visitor.h  optimizer.cpp  optimizer.h  utilities.cpp  utilities.h
symengine/parser/: a.txt  alloc.h  anull.txt  build.sh  generate_tokenizer_and_parser.sh  parse_utils.h  parser.cpp  parser.h  parser.ih  parser.tab.cc  parser.tab.hh  parser.yy  parser_init.cpp  parser_new.cpp  parser_new.h  parser_old.cpp  parser_stype.h  parserbase.h  scanner.cpp  scanner.h  scanner.ih  scanner.ll  scannerbase.h  sem.h  sem1.h  sem2.h  sem3.h  sem4.h  sem5.h  sem6.h  sem7.h  tok.cpp  tok.h  tok.l  tok2.cpp  tok2.re  tokenizer.cpp  tokenizer.h  tokenizer.re  tokh.h  (+1 more)
symengine/polys/: apart.cpp  basic_conversions.cpp  basic_conversions.h  basic_to_poly.cpp  basic_to_poly.h  cancel.cpp  cancel.h  divide_poly.cpp  mpoly_base.h  mpoly_symengine.cpp  mpoly_symengine.h  msymenginepoly.cpp  msymenginepoly.h  uexprpoly.cpp  uexprpoly.h  uintpoly.cpp  uintpoly.h  uintpoly_flint.cpp  uintpoly_flint.h  uintpoly_piranha.cpp  uintpoly_piranha.h  upoly_base.h  upoly_base_symengine.h  upoly_expr_symengine.cpp  upoly_expr_symengine.h  upoly_flint.cpp  upoly_flint.h  upoly_int_symengine.cpp  upoly_int_symengine.h  upoly_piranha.cpp  upoly_piranha.h  upoly_rat_symengine.cpp  upoly_rat_symengine.h  upolybase.h  uratpoly.cpp  uratpoly.h  usymenginepoly.h
symengine/printers/: codegen.cpp  codegen.h  latex.cpp  latex.h  mathml.cpp  mathml.h  sbml.cpp  sbml.h  stringbox.cpp  stringbox.h  strprinter.cpp  strprinter.h  unicode.cpp  unicode.h
symengine/python/: CMakeLists.txt
symengine/ruby/: CMakeLists.txt  README.md  callgrind_test.sh  gdb.sh  symengine.gemspec  valgrind_test.sh
symengine/tests/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  test_arit.py  test_eval.py  test_functions.py  test_integer.py  test_subs.py  test_symbol.py  test_sympify.py  test_sympy_conv.py  test_var.py
symengine/teuchos/: CMakeLists.txt  Teuchos_RCP.hpp  Teuchos_RCPNode.cpp  Teuchos_config.h.in  Teuchos_stacktrace.cpp
symengine/utilities/: stream_fmt.h
(+489 files in other folders)
